Added wand inventory
Added separate cooldown for cast delay and recharge time

--- a/src/main/resources/assets/noitawands/lang/en_us.json
+++ b/src/main/resources/assets/noitawands/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-  "item.noitawands.wand" : "WAND",
-  "item.noitawands.arrow_spell" : "ARROW"
+  "item.noitawands.wand" : "Wand",
+  "item.noitawands.arrow_spell" : "Arrow"
 }
